codepkg/objects/Work_Item__c.object
<CustomObject>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <inlineHelpText>Allowed values: 1, 2, 3, 5, 8, 13</inlineHelpText>
        <label>Story Points</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Item Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prod_Owner_restriction</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 ISCHANGED(  Story_Points__c  ) || ischanged ( Status__c ), 
 $Profile.Name != &apos;Scrum Master&apos; &amp;&amp; $Profile.Name != &apos;Team Member&apos;
)</errorConditionFormula>
        <errorMessage>Product Owner cannot make Status or Story Points changes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Story_Points</fullName>
        <active>true</active>
        <errorConditionFormula>Story_Points__c &lt;&gt; 1  &amp;&amp;  Story_Points__c &lt;&gt; 2 &amp;&amp; Story_Points__c &lt;&gt; 3 &amp;&amp; Story_Points__c &lt;&gt; 5 &amp;&amp; Story_Points__c &lt;&gt; 8 &amp;&amp; Story_Points__c &lt;&gt; 13</errorConditionFormula>
        <errorMessage>Story points allowed values are 1, 2, 3, 5, 8 and 13</errorMessage>
    </validationRules>
</CustomObject>